src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>APAC_Account_Territory__c</fullName>
        <formula>IF(Account.Organization__c  = &quot;Zebra APAC USD&quot;  ||  Account.Organization__c = &quot;Zebra APAC RMB&quot;, 
 CASE( Account.BillingCountryCode, &quot;CN&quot;, &quot;GC&quot;, &quot;HK&quot;, &quot;GC&quot;, &quot;TW&quot;, &quot;GC&quot;, &quot;MN&quot;, &quot;GC&quot;, &quot;MO&quot;,&quot;GC&quot;, &quot;ROA&quot;) 
, &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APAC Account Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Responded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto-Responded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CQC_Resolution_Type__c</fullName>
        <description>Fields used by Sustaining Engineering for entering the resolution type for when cases resolved.  This field is used for metrics.</description>
        <label>CQC Resolution Type</label>
        <picklist>
            <picklistValues>
                <fullName>1. ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. EE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. FW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4. SW</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5. DRVR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6. SDK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7. Tech Pub</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8. MFG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9. Investigation / Root Cause</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSR_Account_Currency__c</fullName>
        <description>This is to derive the currency associated with an account linked to the case logged by EMEA CSRs</description>
        <formula>TEXT(Account.CurrencyIsoCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Account_Number__c</fullName>
        <description>This field is to derive the account number of the account associated to a EMEA CSR case</description>
        <formula>Account.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Case_Custom_Field_Ship_date__c</fullName>
        <description>This is to record the ship date of the original order that the cusotmer complaint was about that are logged by EMEA CSRs</description>
        <label>Ship date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CSR_Complaint_Received_Date__c</fullName>
        <description>This is to capture the actual date and time when the complaint was received from EMEA customer and logged by EMEA CSRs</description>
        <label>Complaint Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CSR_Complaint_Sub_Type__c</fullName>
        <description>This is to capture the sub-type of a customer&apos;s complaint by the EMEA CSRs</description>
        <label>Complaint Sub-Type</label>
        <picklist>
            <picklistValues>
                <fullName>Configuration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Specification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Processing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick / Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Failure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transit</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSR_Customer_Claim__c</fullName>
        <description>This is used to capture the customer&apos;s claim # by the EMEA CSR whilst logging a case</description>
        <inlineHelpText>This is the Customer&apos;s own reference number (if provided)</inlineHelpText>
        <label>Customer Claim #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Delivery__c</fullName>
        <description>This is used to capture the delivery # relevant to the case logged by EMEA CSR to record customer&apos;s complaint</description>
        <label>Delivery #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Dispute_Value__c</fullName>
        <description>This is to capture the dispute amount at the time of case closure by EMEA CSRs</description>
        <label>Dispute Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CSR_Invoice__c</fullName>
        <description>This is used to capture the invoice # of a customer complaint logged as a case by EMEA CSR</description>
        <label>Invoice #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_LPN__c</fullName>
        <description>This is used to capture the LPN # of a customer complaint logged by EMEA CSR as a case</description>
        <label>LPN #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Order__c</fullName>
        <description>this is to capture the order dispute or RMA number issues as a resolution to the case - for EMEA CSRs</description>
        <label>Order #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Other_Warehouse__c</fullName>
        <description>this is to capture &quot;other&quot; warehouse for EMEA CSRs</description>
        <label>Other Warehouse</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Product_Class__c</fullName>
        <description>this is used by EMEA CSRs to record the product class; created in isolation to minimise impact</description>
        <label>Product Class</label>
        <picklist>
            <picklistValues>
                <fullName>AMK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Printer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supplies</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CSR_SO_RMA__c</fullName>
        <description>This is used by the EMEA CSRs to capture SO or RMA # against the case logged by them</description>
        <label>SO / RMA #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CSR_Web_Reference__c</fullName>
        <description>This is the ZARA ref # captured by EMEA CSRs whilst logging a case</description>
        <inlineHelpText>This is the ZARA Collection #</inlineHelpText>
        <label>Web Reference #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseComEmailRecLang__c</fullName>
        <label>CaseComEmailRecLang</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseComNotiReceiver__c</fullName>
        <label>CaseComNotiReceiver</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CaseComRecName__c</fullName>
        <label>CaseComRecName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseEmailReceiverLang__c</fullName>
        <label>CaseEmailReceiverLang</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Age_In_Business_Hours__c</fullName>
        <description>The total case age in business hours from open to close.</description>
        <inlineHelpText>The total case age in business hours from open to close.</inlineHelpText>
        <label>Case Age In Business Hours</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Case_Comment__c</fullName>
        <label>Case Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Case_Created_by_Role__c</fullName>
        <formula>CreatedBy.UserRole.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Created by Role</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Case External ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Organization__c</fullName>
        <label>Case Organization</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case_Owner_Language__c</fullName>
        <formula>OwnerId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Owner Language</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closure_Comments__c</fullName>
        <label>Closure Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Email_Optout__c</fullName>
        <formula>Contact.HasOptedOutOfEmail</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email Optout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CoveoSolutions__VisitId__c</fullName>
        <label>UsageAnalytics VisitId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedBy_User__c</fullName>
        <formula>IF( CreatedById = $User.Id , 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CreatedBy User?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Impact_Definition__c</fullName>
        <label>Customer Impact Definition</label>
        <picklist>
            <controllingField>ZEB_CQC_CustImpact__c</controllingField>
            <picklistValues>
                <fullName>Loss in business of &gt; $250,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No workaround possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fault of such as to make the product unusable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Catastrophic failure of hardware or functionality. Printer not useable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes, Safety or health issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss in business of &gt; $100 000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Difficult, costly, or time-consuming. User must alter their system.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major component or function is inoperable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Significant loss of performance or functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No, Safety or health issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss in business of &gt; $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Requires moderate effort. User must change settings or configuration.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certain component(s) are temporarily or intermittently inoperable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Some loss of performance, moderate inconsistencies. No loss of operation.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loss in business of &lt; $50,000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workaround is easy to implement.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fault does not meet exact requirements of specification, does not alter functionality.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor inconsistencies in product performance.</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Reference_Number__c</fullName>
        <label>Customer Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Reference__c</fullName>
        <label>Customer Reference</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_hours_mins_for_last_modified__c</fullName>
        <formula>IF( 
 Total_from_last_modified_to_current_time__c &gt; 0 , 
TEXT( FLOOR(  Total_from_last_modified_to_current_time__c ) ) &amp; &quot; days &quot; 
&amp; TEXT( FLOOR( MOD(  Total_from_last_modified_to_current_time__c * 24, 24 ) ) ) &amp; &quot; hours &quot; 
&amp; TEXT( ROUND( MOD(  Total_from_last_modified_to_current_time__c * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;, 
&quot;&quot; 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days,hours, mins for last modified</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Depot_Location__c</fullName>
        <label>Depot Location</label>
        <picklist>
            <picklistValues>
                <fullName>Australia, Melbourne {10 Wesley Court, Burwood}</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China, Shanghai {No18 Zijin Road, Zhangpu Town, Kunshan Jiangsu Providence}</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India, Bangalore {#4,5 Maruthi Industrial Estate, Whitefield Road}</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Singapore {49 Jalan Pemimpin #03-11 APS Industrial Building Singapore}</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Development_Platform__c</fullName>
        <label>Development Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cross-platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Linux</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mac</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unsupported</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Browser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Windows PC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalated__c</fullName>
        <description>This pick list is created to customize the chart colors for partners</description>
        <label>Escalated?</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Est_CQC_Closure_Date__c</fullName>
        <description>Estimated CQC Case Closure Date (80% Confidence)</description>
        <inlineHelpText>Estimated CQC Case Closure Date (80% Confidence)</inlineHelpText>
        <label>Est CQC Closure Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_PC_Closed_Date__c</fullName>
        <formula>DATEVALUE(ClosedDate)</formula>
        <label>Hidden Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>F_PC_Created_Date__c</fullName>
        <formula>DATEVALUE(CreatedDate)</formula>
        <label>Hidden Created Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Feature_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feature Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HardSoftClosed_Received__c</fullName>
        <formula>IF((ISPICKVAL(Status,  &quot;Solution Provided&quot;) || ISPICKVAL(Status, &quot;Closed&quot;) )  &amp;&amp;   ISPICKVAL(Last_Email_Status__c, &quot;Received&quot;) , &quot;Y&quot;, &quot;N&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hard &amp; Soft Closed with Received</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISV_Bug__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISV Bug</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISV_Person_Responsible__c</fullName>
        <label>Person Responsible</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISV_Product_Models__c</fullName>
        <description>Enter the product model names that apply to this Case.</description>
        <label>ISV Product Models</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ISV_Total_Hours__c</fullName>
        <label>ISV Total Hours</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Action_Completed_ISV__c</fullName>
        <label>Last Action Completed</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Last_Email_Status_Image__c</fullName>
        <description>This field will display an image depending on the Last Email Status field</description>
        <formula>IF( ISPICKVAL( Status , &quot;Closed&quot;) || ISPICKVAL( Status , &quot;Solution Provided&quot;), IF(ISPICKVAL(Last_Email_Status__c, &quot;Received&quot;), IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004tjYc&amp;oid=00D560000008iX6&quot;, &quot;Received&quot;), IF(ISPICKVAL(Last_Email_Status__c, &quot;Sent&quot;), IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004tfKH&amp;oid=00D560000008iX6&quot;, &quot;Sent&quot;),null) ),
IF( ISPICKVAL(Last_Email_Status__c, &quot;Received&quot;) , IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004tfJx&amp;oid=00D560000008iX6&quot;, &quot;Received&quot;),  IF(ISPICKVAL(Last_Email_Status__c, &quot;Sent&quot;) ,IMAGE(&quot;/servlet/servlet.ImageServer?id=015i0000004tfKH&amp;oid=00D560000008iX6&quot;, &quot;Sent&quot;),null) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Email Status Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Email_Status__c</fullName>
        <description>Shows the last email action on this case. Will show: 
- Sent if the last email on the case was an outbound email
- Received if the last email on the case was a response from the customer.</description>
        <inlineHelpText>Shows the last email action on this case. Will show: 
- Sent if the last email on the case was an outbound email
- Received if the last email on the case was a response from the customer.</inlineHelpText>
        <label>Last Email Status</label>
        <picklist>
            <picklistValues>
                <fullName>Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Case_Comment_Owner__c</fullName>
        <label>Most Recent Case Comment Creator</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Public_Case_Comment__c</fullName>
        <label>Most Recent Public Case Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Action_Due_Date_ISV__c</fullName>
        <label>Next Action Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Action_Due_ISV__c</fullName>
        <label>Next Action Due</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Comments__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to restrict community users from adding comments to a closed case.</description>
        <label>No Comments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Originator__c</fullName>
        <description>This field identifies who requested the case to be created.</description>
        <inlineHelpText>Enter the name of the person requesting the case to be created</inlineHelpText>
        <label>Originator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PC_Case_Creator__c</fullName>
        <formula>CreatedBy.FirstName + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PC Case Creator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Region__c</fullName>
        <label>Partner Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Accessories_Division__c</fullName>
        <formula>ZEB_Parts_Accessories__r.Division_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts/Accessories Division</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Accessories_Product_Family__c</fullName>
        <formula>ZEB_Parts_Accessories__r.ZEB_Product_Family__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts/Accessories Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parts_Accessories_Product_Line__c</fullName>
        <formula>ZEB_Parts_Accessories__r.Product_Line__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parts/Accessories Product Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Status__c</fullName>
        <description>Used to store the status before case is hard closed.</description>
        <label>Previous Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_ISV_Owner__c</fullName>
        <label>Primary ISV Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Beverly Vinson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dan Quagliana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manuel Caicedo-Rivera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Robin West</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gloria Park</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ana Sanchez</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Denisa Zaharie</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Randy Kaiser</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cathy Wei</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>John Seimer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vojtech Robotka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andy Doorty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ed Finn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brian Courtois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Matt White</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dean Jackson</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Printer_Platform__c</fullName>
        <label>Printer Platform</label>
        <picklist>
            <picklistValues>
                <fullName>Card</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Desktop</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kiosk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tabletop</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMACreation_Type__c</fullName>
        <label>RMACreation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Sync</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Async</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_Billing_City__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Billing_County__c</fullName>
        <formula>Account.Primary_County__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing County</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Billing_PostalCode__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing PostalCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Billing_Street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_CC_Expiry_Month__c</fullName>
        <label>Expiry Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_CC_Expiry_Year__c</fullName>
        <label>Expiry Year</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_CC_Number__c</fullName>
        <label>CreditCard Number</label>
        <length>16</length>
        <maskChar>X</maskChar>
        <maskType>lastFour</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>RMA_Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMA_CreditCardAuthNumber__c</fullName>
        <label>CreditCardAuthNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_CreditCardTransactionNumber__c</fullName>
        <label>CreditCardTransactionNumber</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_CreditCard_Amount__c</fullName>
        <label>CreditCard Amount</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_CreditCard_Expiry__c</fullName>
        <label>CreditCard Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_CreditCard_Holder_Name__c</fullName>
        <label>CreditCard Holder Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_CreditCard_Type__c</fullName>
        <label>CreditCard Type</label>
        <picklist>
            <picklistValues>
                <fullName>AMERICAN EXPRESS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VISA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MASTERCARD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MAESTRO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_ErrorDescription__c</fullName>
        <label>RMA ErrorDescription</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RMA_Hold_Reason__c</fullName>
        <label>Hold Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>RMA_InBound_Carrier__c</fullName>
        <label>InBound Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>EXPEDITORS AIR(M,TH&amp;F)CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL GLOBAL AIR (THUR) CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUEDIAMOND OCEAN(M&amp;F)CON</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BLUEDIAMOND OCEAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_InBound_Tracking_Number__c</fullName>
        <label>InBound Tracking Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Open_Date__c</fullName>
        <label>Open Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RMA_Order_Type__c</fullName>
        <label>Order Type</label>
        <picklist>
            <picklistValues>
                <fullName>RMA Advance Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RMA Repair Return</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_Oubound_Carrier_Account__c</fullName>
        <label>Oubound Carrier Account</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RMA_Oubound_Carrier_Service__c</fullName>
        <label>Oubound Carrier Service</label>
        <picklist>
            <picklistValues>
                <fullName>1ST DAY</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_Oubound_Carrier__c</fullName>
        <label>Oubound Carrier</label>
        <picklist>
            <picklistValues>
                <fullName>EXPEDITORS AIR(M,TH&amp;F)CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DHL GLOBAL AIR (THUR) CON</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BLUEDIAMOND OCEAN(M&amp;F)CON</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>BLUEDIAMOND OCEAN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RMA_Outbound_Ship_Date__c</fullName>
        <label>Outbound Ship Date</label>
        <type>Date</type>
    </fields>
</CustomObject>